--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html>
 <body>
 <h1>kth1323123</h1>
-<p>I'm hosting with kth1323123 GitHub Pages.</p?
+<p>I'm hosting with kth1323123 GitHub Pages.</p>
+<h1>I'm hosting with kth1323123 GitHub Pages.</h1>
+
 </body>
 </html>
